# mony

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  SECURITY.md  TODO.md  docker-compose.yml  sample_transactions.csv
.github/: pull_request_template.md
.github/workflows/: foundation.yml
backend/: Cargo.toml  Dockerfile  README.md
backend/migrations/: 20260328233000_initial_finance_schema.sql  20260403110000_auth_foundation.sql  20260403152000_auth_username.sql  20260404110000_auth_passkeys.sql  20260411130500_allow_discoverable_webauthn_authentication.sql  20260411180000_user_ai_settings.sql
backend/src/: analytics.rs  app.rs  auth.rs  categories.rs  categorization.rs  config.rs  db.rs  imports.rs  ingestion.rs  lib.rs  main.rs  providers.rs  security.rs  state.rs  transactions.rs  user.rs
dev/systemd/: mony-backend.service.in  mony-db.service.in  mony-dev.target  mony-frontend.service.in
docs/: dev-services.md  self-hosting.md
docs/adr/: 0001-initial-tech-stack.md  0002-unified-financial-schema.md  0003-financial-invariants-and-idempotent-imports.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  globals.d.ts
frontend/src/auth/: AuthProvider.tsx  ProtectedRoute.tsx  context.ts  passkeys.ts  useAuth.ts
frontend/src/components/: FinanceTrendChart.tsx  Layout.tsx
frontend/src/features/: categorizeAssistant.ts
frontend/src/pages/: Account.tsx  Analytics.tsx  Categorize.tsx  Dashboard.tsx  Import.tsx  Login.tsx  Settings.tsx  Transactions.tsx
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/src/theme/: ThemeProvider.tsx  context.ts  useTheme.ts
frontend/src/types/: index.ts
frontend/src/utils/: currency.ts
scripts/: install-dev-services.sh  mony-services
