[package]
name = "mony-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
axum = { version = "0.8.8", features = ["json", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["migrate", "postgres", "runtime-tokio"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
