[package]
name = "mony-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
axum = { version = "0.8.8", features = ["json", "tokio", "multipart"] }
chrono = { version = "0.4.39", features = ["serde"] }
csv = "1.3.0"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.8"
sqlx = { version = "0.8.6", default-features = false, features = ["migrate", "postgres", "runtime-tokio", "chrono", "uuid", "macros", "derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.13.2", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
