[package]
name = "mony-backend"
version = "0.0.1"
edition = "2021"
rust-version = "1.88"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["json", "tokio", "multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
cookie = "0.18.1"
csv = "1.3.0"
dotenvy = "0.15.7"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
rand = "0.8.5"
rpassword = "7.3.1"
rsa = { version = "0.9.8", features = ["pem"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.8"
sqlx = { version = "0.8.6", default-features = false, features = ["migrate", "postgres", "runtime-tokio", "chrono", "uuid", "macros", "derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = "2.5.7"
uuid = { version = "1.13.2", features = ["v4", "v7", "serde"] }
webauthn-rs = { version = "0.5.4", features = ["danger-allow-state-serialisation", "conditional-ui"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
